--- a/index.html
+++ b/index.html
@@ -3,15 +3,15 @@
 
 <head>
   <meta charset="UTF-8">
-  <title>Anne Good</title>
+  <title>Anne Sweeney Good</title>
 </head>
 
 <body>
 
-  <h1>Anne Good </h1>
+  <h1>Anne Sweeney Good</h1>
   <article>
-    <a target="_blank" href="assets/john-lee-oMneOBYhJxY-unsplash.jpg">
-      <img width="200" src="assets/john-lee-oMneOBYhJxY-unsplash.jpg" alt="Mountain Landscape">
+    <a target="_blank" href="assets/GoodAnne_1019_8241small.jpg">
+      <img width="200" src="assets/GoodAnne_1019_8241small.jpg" alt="Anne Good">
     </a>
   </article>
 
