uploaded visualization files

--- a/compare.html
+++ b/compare.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8">
-  <title>Dashboard</title>
+  <title>Comparison</title>
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
     integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
   <link rel="stylesheet" href="style.css">
@@ -46,15 +46,10 @@
 
   <br>
   <div class="container">
-    <div class="jumbotron">
-      <h1 class="display-4">Latitude Analysis Dashboard </h1>
-      <p>This data analysis project used the Open Weather API to show the relationship of certain factors like humidity,
-        temperature, wind speed, etc. for a set of random set of cities. </p>
-      <p>The project showed the relationship of these factors in relationship with latitude.</p>
-    </div>
 
     <h1 class="display-5">Visualizations </h1>
     <hr>
+    <p>Click on any plot to see more.</p>
     <div class="row">
       <div class="col-lg-6">
         <div class="box skyblue"></div>
@@ -88,10 +83,10 @@
           <img src="images/LatandWindSpeed.png" class="img-fluid" alt="Latitude vs Wind Speed"></a>
           <br>
         </article>
-
       </div>
     </div>
     <hr>
+
   </div>
 
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
